Fix mega menus with border-radius
This indents mega menus so that they start/end where the roundedness
begins.  Unfortunately we have to set a fixed width of 100% for mega
menus in IE9 because we're using display: table there, which means that
setting a left value would indent the entire menu too far. So we're
doing this for only flexbox-friendly browsers.

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -232,6 +232,11 @@ html.nav-visible {
     right: 0;
     width: 100%;
   }
+
+  .flexbox .navbar-menu.mega,
+  .flexboxlegacy .navbar-menu.mega {
+    width: auto;
+  }
 }
 
 .navbar-menu h2 {
@@ -624,7 +629,8 @@ html.nav-visible {
 }
 
 @media (min-width: 630px) {
-  .navbar-theme-blue .navbar-menu.mega {
+  .flexbox .navbar-theme-blue .navbar-menu.mega,
+  .flexboxlegacy .navbar-theme-blue .navbar-menu.mega {
     left: 8px;
     right: 8px;
   }
